# CozeeFarm

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  IScene.h  SceneManager.h  SpriteRenderer.h  TestScene.h  TextureLoader.h
src/: Game.cpp  SceneManager.cpp  SpriteRenderer.cpp  TestScene.cpp  TextureLoader.cpp  main.cpp
